# beamline-c-gateway

./: .dockerignore  .gitignore  .gitlab-ci.yml  15_TASKS_COMPLETE.md  15_TASKS_FINAL_STATUS.md  15_TASKS_REMAINING.md  BENCHMARK_VERIFICATION_FINAL.md  CMakeLists.txt  Dockerfile  Dockerfile.loadtest  Dockerfile.production  EXECUTING_E2E.md  FINAL_COMMITMENT_100_PERCENT.md  FINAL_HONEST_STATE.md  FINAL_HONEST_TRUTH.md  FINAL_MAXIMUM_DECLARATION.md  IMPLEMENTATION_PLAN.md  MAXIMUM_ACHIEVED.md  Makefile.ipc  P2_TASKS_COMPLETE.md  POSITIVE_RESULTS_ACHIEVED.md  PRODUCTION_READY.md  PROJECT_COMPLETE.md  READINESS.md  README.md  README_RATE_LIMITING_POC.md  ROUTER_E2E_FINAL_RESULT.md  SECURITY.md  STATUS.md  TODO.md  TODO_15_TASKS.md  TODO_15_TASKS_E2E_REFINEMENT.md  TODO_15_TASKS_FINAL.md  V2_README.md  VERIFICATION_RESULT.md  docker-compose.production.yml
.github/: QUICKSTART.md
.github/workflows/: README.md  ci.yml  release.yml
.gitlab-ci/: CHECK_TAXONOMY.md  README.md  check-production-readiness.sh
artifacts/: PRODUCTION_EXECUTION_LOG.md  REAL_ROUTER_E2E_EXECUTION.md  ROUTER_E2E_RESULTS.md  contract_validation_results.txt
artifacts/proof/: PROOF.md  benchmarks_changes.diff  binaries.txt  build_binaries.txt  build_exit_code.txt  commit_sha.txt  current_sha.txt  final_build_verification.txt  final_commit_sha.txt  latency_exit_code.txt  throughput_exit_code.txt
artifacts/router-e2e/: COMPLETE_SUCCESS.md  DIAGNOSIS_RECV_FRAME.md  DIAGNOSIS_WRONG_BINARY.md  FIRST_RUN_RESULTS.md  ITERATION_COMPLETE.md  PROTOCOL_FIX.md  SECOND_RUN.md  SOLUTION.md  SUCCESS.md  SUCCESS_GATEWAY_STARTED.md
artifacts/verification/: socket_path_verification.txt
benchmarks/: 15_TASKS_AUDIT.md  ALREADY_FIXED_REMINDER.md  BENCHMARKS_TXT_SUMMARY.md  BENCHMARK_PLAN.md  BENCHMARK_PLAN_ASSESSMENT.md  BENCH_LATENCY_ASSESSMENT.md  BENCH_MEMORY_FIXED.md  BENCH_THROUGHPUT_ASSESSMENT.md  CRITICAL_ASSESSMENT_RESPONSE.md  FINAL_HONEST_STATUS.md  FIXES_FINAL_STATUS.md  LOAD_TEST_FIXED.md  P0_P1_P2_FIXES_COMPLETE.md  RUN_BENCHMARKS_ASSESSMENT.md  RUN_BENCHMARKS_ENHANCED.md  SOCKET_PATH.md  WRAPPER_ASSESSMENT_RESPONSE.md  bench_ipc_latency.c  bench_ipc_throughput.c  bench_memory.c  check_bench_gate.sh  load_test.sh  run_benchmarks.sh
build-san/: CTestTestfile.cmake
config/: otel_config.json
docs/: .project-rules.md  ADMIN_GRPC_API.md  CONTRIBUTING.md  DOCUMENTATION_CLEANUP.md  DOCUMENTATION_ORGANIZATION.md  DOCUMENTATION_STRUCTURE.md  IDE_GATEWAY.md  INDEX.md  IPC_GATEWAY_RUNBOOK.md  KNOWN_ISSUES.md  NEXT_STEPS.md  OBSERVABILITY.md  OBSERVABILITY_DASHBOARD.md  ORGANIZATION.md  P0_NATS_INTEGRATION_DIAGNOSTIC.md  P0_SUMMARY.md  PRODUCTION_LOGGING.md  PROJECT_COMPLETE.md  REDIS_RATE_LIMITING_CONFIG_EXAMPLE.sh  REDIS_RATE_LIMITING_POC.md  ROOT_CLEANUP_FINAL.md  SMOKE_TEST.md  V2_FINAL_SUMMARY.md  V2_PROGRESS.md
docs/backlog/: TODO.md
docs/decisions/: CHECK_001_IPC_PING_DOWNGRADE.md
docs/dev/: FINAL_PROOF.md  P1_RESOLUTION.md  PRODUCTION_DOD.md  PROOF.md  PROOF_SYSTEM.md  STATUS.md  TECHNICAL_DEBT.md  VERIFICATION_CHECK_BENCH_GATE.md
docs/implementation/: PROOF_REQUIREMENTS.md
docs/operations/: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_PACKAGE.md  TESTING_GUIDE.md  benchmarking.md
docs/plans/: IMPLEMENTATION_PLAN.md
docs/poc/: README_RATE_LIMITING_POC.md
docs/readiness/: 100_PERCENT_REALITY_CHECK.md  (+22 more)
examples/: ipc_nats_demo.c  ipc_server_demo.c
include/: audit_log.h  buffer_pool.h  circuit_breaker.h  gateway_health.h  grpc_gateway.h  health_check.h  ipc_backpressure.h  ipc_capabilities.h  ipc_config.h  ipc_nats_bridge.h  ipc_peercred.h  ipc_protocol.h  ipc_server.h  ipc_streaming.h  json_validator.h  jsonl_logger.h  nats_pool.h  nats_resilience.h  nats_subjects.h  prometheus_exporter.h  redis_rate_limiter.h  router_contract.h  trace_context.h  websocket_gateway.h
scripts/: benchmark_observability.sh  calculate_readiness.sh  check_markdown_layout.sh  check_percent_readiness.sh  check_readiness_consistency.sh  collect_sanitizer_results.sh  create_evidence_pack.sh  create_ipc_production_tasks.py  create_ipc_tasks.sh  generate_coverage.sh  generate_proof_pack.sh  run_sanitizers.sh  smoke_cgateway_router.sh  soak_with_metrics.sh  tidy_markdown.sh  validate_observability_config.sh
src/: abuse_detection.c  abuse_detection.h  admin_grpc.c  admin_grpc.h  audit_log.c  backpressure_client.c  backpressure_client.h  buffer_pool.c  circuit_breaker.c  gateway_health.c  grpc_gateway.c  health_check.c  http_server.c  http_server.h  ipc_backpressure.c  ipc_capabilities.c  ipc_config.c  ipc_nats_bridge.c  ipc_peercred.c  ipc_protocol.c  ipc_server.c  ipc_streaming.c  json_validator.c  jsonl_logger.c  log_sanitizer.c  main.c  nats_client_real.c  nats_client_stub.c  nats_client_stub.h  nats_pool.c  nats_resilience.c  nats_subjects.c  prometheus_exporter.c  rate_limiter.c  rate_limiter.h  rate_limiter_memory.c  rate_limiter_redis.c  redis_rate_limiter.c  router_contract.c  trace_context.c  (+1 more)
tests/: README.md  README_REDIS_RATE_LIMITER_TESTS.md  admin_grpc_test.c  c-gateway-http-test.c  c-gateway-json-test.c  c-gateway-nats-test.c  c-gateway-router-admin-contract-test.c  c-gateway-router-extension-errors-test.c  c-gateway-router-test.c  comprehensive_gateway_validation.sh  contract_validation.py  e2e_core_validation.sh  e2e_integration_test.sh  e2e_router_errors.sh  e2e_router_happy_path.sh  e2e_router_reconnect_storm.sh  e2e_router_subjects_headers.sh  e2e_router_timeouts.sh  e2e_validation_lite.sh  fuzz_ipc_protocol.c  gateway_conflict_contract_test.c  install_valgrind.sh  local_validation.sh  mock_router.py  nats-router-smoke-test.c  production_experience_executor.sh  production_load_test.py  prove_router_integration_gap.sh  real_router_e2e_executor.sh  real_router_integration_test.sh  redis_rate_limiter_integration_test.c  redis_rate_limiter_test.c  run_router_e2e.sh  run_router_e2e_evidence_pack.sh  run_router_e2e_evidence_pack_FINAL.sh  run_router_e2e_evidence_pack_REFERENCE.sh  run_router_e2e_with_evidence.sh  run_router_scenarios_with_artifacts.sh  sanitizer_tests.sh  score_readiness_from_artifacts.sh  (+34 more)
(+84 files in other folders)
